preview day code

--- a/tamreader/MainPage.xaml
+++ b/tamreader/MainPage.xaml
@@ -31,7 +31,7 @@
             </CaptureElement>
 
         </Grid>
-        <Image x:Name="stopImg" HorizontalAlignment="Left" Height="278" Margin="37,54,0,0" VerticalAlignment="Top" Width="282" Source="stop.png" AutomationProperties.Name="stopImg" Visibility="Collapsed" Grid.Row="1"/>
+        <Image x:Name="stopImg" HorizontalAlignment="Left" Height="278" Margin="37,54,0,0" VerticalAlignment="Top" Width="282" Source="images/STOP.png" AutomationProperties.Name="stopImg" Visibility="Collapsed" Grid.Row="1"/>
         <MediaElement x:Name="failMediaElement" HorizontalAlignment="Left" Height="60" Margin="286,10,0,0" Grid.Row="0" VerticalAlignment="Top" Width="52" AutoPlay="False" Source="/Assets/fail.mp3"/>
         <MediaElement x:Name="successMediaElement" HorizontalAlignment="Left" Height="60" Margin="283,17,0,0" Grid.Row="0" VerticalAlignment="Top" Width="52" AutoPlay="False" Source="/Assets/success.mp3"/>
         <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="76,10,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Current Speed" VerticalAlignment="Top" Height="46" Width="212" FontSize="30"/>
@@ -40,6 +40,13 @@
         <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="11,47,0,0" TextWrapping="Wrap" Text="smart mode:" VerticalAlignment="Top" Width="151" Height="37" FontSize="22"/>
         <Image x:Name="image1" HorizontalAlignment="Left" Height="40" Margin="96,3,0,0" VerticalAlignment="Top" Width="169" Source="logo.jpg"/>
         <TextBlock x:Name="unitsText" HorizontalAlignment="Left" Margin="225,178,0,0" Grid.Row="1" TextWrapping="Wrap" Text="cm/sec" VerticalAlignment="Top" Width="51" Height="24" FontWeight="Bold"/>
+        <Button x:Name="button" Content="" HorizontalAlignment="Left" Margin="2,-1,0,0" VerticalAlignment="Top" Height="45" Width="45" Click="button_Click">
+            <Button.Background>
+                <ImageBrush Stretch="Fill" ImageSource="images/upCloud.png"/>
+            </Button.Background>
+        </Button>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="line:" VerticalAlignment="Top" Margin="269,11,0,0"/>
+        <TextBlock x:Name="lineColorText" HorizontalAlignment="Left" Margin="303,12,0,0" TextWrapping="Wrap" Text="B" VerticalAlignment="Top" Height="21" Width="15"/>
 
     </Grid>
 </Page>
